--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body{
     justify-content: center;
     width: 512px;
     height: 420px;
-    overflow: hidden;
+    /* overflow: hidden; */
     z-index: 2;
 }
 .login-container{
@@ -101,7 +101,9 @@ body{
     display: flex;
     flex-direction: column;
     transition: .5s ease-in-out;
-    height: 600px;
+    height: 650px;
+    margin-top: 200px;
+    /* overflow: scroll; */
 }
 .top span{
     color: #fff;
